--- a/index.html
+++ b/index.html
@@ -147,16 +147,15 @@
     </p>
     <p>Habitacion sencilla (cama doble o dos indivituales) $750</p>
     <p>Habitacion una cama king size $800</p>
-    <P>Habitacion 1 cama matrimonial y 1 king $1250</P>
-    <P>Habitacion 2 camas matrimoniales $1250</P>
-    <P
-      >Horarios Se puede hacer el checkin desde las 8 am y el checout es a la
-      1pm</P
-    >
-    <P>El pago es unicamente en efectivo en el hotel</P>
-    <P>Contacto</P>
-    <P>Angeles</P>
-    <P>5959534087</P>
+    <p>Habitacion 1 cama matrimonial y 1 king $1250</p>
+    <p>Habitacion 2 camas matrimoniales $1250</p>
+    <p>
+      Horarios Se puede hacer el checkin desde las 8 am y el checout es a la 1pm
+    </p>
+    <p>El pago es unicamente en efectivo en el hotel</p>
+    <p>Contacto</p>
+    <p>Angeles</p>
+    <p>5959534087</p>
   </div>
   <div class="texto" style="padding-top: 5%">
     <div style="padding-bottom: 2%; font-size: 30px">Hotel Xancalli</div>
@@ -169,9 +168,9 @@
     </p>
     <p>Habitacion sencilla $600</p>
     <p>Habitacion con sofa cama $700</p>
-    <P>Habitacion doble $1100</P>
-    <P>Habitacion familiar $1200</P>
-    <P>Contacto</P>
-    <P>5956889921</P>
+    <p>Habitacion doble $1100</p>
+    <p>Habitacion familiar $1200</p>
+    <p>Contacto</p>
+    <p>5956889921</p>
   </div>
 </div>
