--- a/index.html
+++ b/index.html
@@ -132,31 +132,31 @@
   >
     <img
       style="padding-top: 1%"
-      src="assets/itinerario1.png"
+      src="itinerario1.png"
       width="300px"
       height="120px"
     />
     <img
       style="padding-top: 1%"
-      src="assets/itinerario2.png"
+      src="itinerario2.png"
       width="250px"
       height="100px"
     />
     <img
       style="padding-top: 1%"
-      src="assets/itinerario3.png"
+      src="itinerario3.png"
       width="250px"
       height="100px"
     />
     <img
       style="padding-top: 1%"
-      src="assets/itinerario4.png"
+      src="itinerario4.png"
       width="250px"
       height="150px"
     />
     <img
       style="padding-top: 1%"
-      src="assets/itinerario5.png"
+      src="itinerario5.png"
       width="200px"
       height="150px"
     />
@@ -180,17 +180,17 @@
     >
   </div>
   <div class="encabezado">
-    <img src="assets/copas.png" width="200px" height="250px" />
+    <img src="copas.png" width="200px" height="250px" />
   </div>
   <div class="encabezado">Mesas de regalos</div>
   <div class="mesaqr">
-    <img src="assets/qramazon.png" width="200px" height="200px" />
+    <img src="qramazon.png" width="200px" height="200px" />
     <div class="encabezado" style="padding-bottom: 5%">
       <a href="https://www.amazon.com.mx/wedding/share/fernandayjoaquin"
         >Amazon</a
       >
     </div>
-    <img src="assets/qrliverpool.png" width="200px" height="200px" />
+    <img src="qrliverpool.png" width="200px" height="200px" />
     <div class="encabezado" style="padding-bottom: 2%">
       <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51574733"
         >Liverpool</a
