--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap");
   .cuerpo {
     height: max-content;
-    width: max-contents;
+    width: 340px;
     --background-color: #f9faeb;
     display: flex;
     flex-direction: column;
