--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   }
 </style>
 
-<div class="cuerpo">
+<div class="cuerpo" style="background-color: #f9faeb; width: 340px">
   <div class="encabezado">
     <div>¡Nos casamos!</div>
   </div>
