--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   .cuerpo {
     height: max-content;
     width: 340px;
-    --background-color: #f9faeb;
+    background-color: #f9faeb;
     display: flex;
     flex-direction: column;
-    --align-items: center;
-
-    border-color: red;
-    border-width: 10px;
-    --border-style: solid;
   }
 
   .encabezado {
