--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap");
   .cuerpo {
     height: max-content;
+    width: 100%;
     width: 340px;
     background-color: #f9faeb;
     display: flex;
@@ -61,7 +62,7 @@
   }
 </style>
 
-<div class="cuerpo" style="background-color: #f9faeb; width: 340px">
+<div class="cuerpo">
   <div class="encabezado">
     <div>¡Nos casamos!</div>
   </div>
