--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     display: flex;
     flex-direction: column;
   }
-
+  .body {
+    height: fit-content;
+    width: fit-content;
+    padding: 0%;
+    margin: 0%;
+  }
   .encabezado {
     font-family: "Great Vibes", serif;
     padding: 25px 0px 0px 0px;
