--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   }
   .encabezado {
     font-family: "Great Vibes", serif;
-    padding: 25px 0px 0px 0px;
-    font-size: 35px;
+    padding: 5% 0 0 0;
+    font-size: 70px;
     display: flex;
     justify-content: center;
   }
@@ -26,20 +26,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 50px;
+    font-size: 100px;
     color: #9d8b56;
     padding: 10%;
   }
 
   .texto {
-    font-size: 20px;
+    font-size: 40px;
     text-align: center;
     font-family: "Josefin Slab", serif;
   }
 
   .fecha {
     padding-top: 5%;
-    font-size: 35px;
+    font-size: 70px;
     font-family: "Josefin Slab", serif;
     color: #9d8b56;
     display: flex;
@@ -55,7 +55,7 @@
     align-items: center;
     text-align: center;
     padding-bottom: 5%;
-    font-size: 20px;
+    font-size: 40px;
   }
 
   .mesaqr {
@@ -84,13 +84,13 @@
   </div>
   <div class="fecha">
     <div>Sabado</div>
-    <div style="font-size: 60px">
-      <a style="font-size: 80px">|</a> <a>22</a>
-      <a style="font-size: 80px">|</a>
+    <div style="font-size: 120px">
+      <a style="font-size: 160px">|</a> <a>22</a>
+      <a style="font-size: 160px">|</a>
     </div>
     <div>Marzo</div>
   </div>
-  <div class="fecha" style="font-size: 35px">13:30 hrs</div>
+  <div class="fecha" style="font-size: 70px">13:30 hrs</div>
   <div class="texto" style="padding-top: 10%">
     <div>Parroquia San Miguel Arcángel</div>
     <div style="padding: 5% 0 5% 0">
@@ -104,7 +104,7 @@
     </div>
 
     <div>
-      <a style="font-size: 65px; font-weight: lighter; color: #9d8b56">|</a>
+      <a style="font-size: 130px; font-weight: lighter; color: #9d8b56">|</a>
     </div>
 
     <div style="text-align: center">
@@ -133,32 +133,32 @@
     <img
       style="padding-top: 1%"
       src="itinerario1.png"
-      width="300px"
-      height="120px"
+      width="450px"
+      height="225px"
     />
     <img
       style="padding-top: 1%"
       src="itinerario2.png"
-      width="250px"
-      height="100px"
+      width="400px"
+      height="200px"
     />
     <img
       style="padding-top: 1%"
       src="itinerario3.png"
-      width="250px"
-      height="100px"
+      width="400px"
+      height="200px"
     />
     <img
       style="padding-top: 1%"
       src="itinerario4.png"
-      width="250px"
-      height="150px"
+      width="400px"
+      height="200px"
     />
     <img
       style="padding-top: 1%"
       src="itinerario5.png"
-      width="200px"
-      height="150px"
+      width="400px"
+      height="3500px"
     />
   </div>
 
@@ -180,33 +180,33 @@
     >
   </div>
   <div class="encabezado">
-    <img src="copas.png" width="200px" height="250px" />
+    <img src="copas.png" width="400px" height="500px" />
   </div>
   <div class="encabezado">Mesas de regalos</div>
   <div class="mesaqr">
-    <img src="qramazon.png" width="200px" height="200px" />
+    <img src="qramazon.png" width="400px" height="400px" />
     <div class="encabezado" style="padding-bottom: 5%">
       <a href="https://www.amazon.com.mx/wedding/share/fernandayjoaquin"
         >Amazon</a
       >
     </div>
-    <img src="qrliverpool.png" width="200px" height="200px" />
+    <img src="qrliverpool.png" width="400px" height="400px" />
     <div class="encabezado" style="padding-bottom: 2%">
       <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51574733"
         >Liverpool</a
       >
     </div>
-    <p class="texto">no. evento 51574733</p>
+    <p class="texto">No. Evento 51574733</p>
   </div>
 
   <div class="encabezado">Hoteles Cercanos</div>
   <div class="texto" style="padding-top: 5%">
-    <div style="padding-bottom: 2%; font-size: 30px">Hotel Fontana</div>
+    <div style="padding-bottom: 2%; font-size: 60px">Hotel Fontana</div>
     <a
       href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e8909b3f1813:0xef5bd8f5bea9964f?entry=s&sa=X&ved=1t:8290&ictx=111"
       >Ubicación</a
     >
-    <p style="padding-bottom: 2%; font-size: 20px">
+    <p style="padding-bottom: 2%; font-size: 40px">
       Habitaciones (costos aproximados)
     </p>
     <p>Habitacion sencilla (cama doble o dos indivituales) $750</p>
@@ -222,12 +222,12 @@
     <p>5959534087</p>
   </div>
   <div class="texto" style="padding-top: 5%">
-    <div style="padding-bottom: 2%; font-size: 30px">Hotel Xancalli</div>
+    <div style="padding-bottom: 2%; font-size: 60px">Hotel Xancalli</div>
     <a
       href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e917bf1ceb21:0xd30f80aceb4437b?entry=s&sa=X&ved=1t:8290&ictx=111"
       >Ubicación</a
     >
-    <p style="padding-bottom: 2%; font-size: 20px">
+    <p style="padding-bottom: 2%; font-size: 40px">
       Habitaciones (costos aproximados)
     </p>
     <p>Habitacion sencilla $600</p>
