--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
   }
-  .body {
+  body {
     height: fit-content;
     width: fit-content;
     padding: 0%;
@@ -63,6 +63,32 @@
     flex-direction: column;
     align-items: center;
     padding-top: 5%;
+  }
+  /* From Uiverse.io by zjssun */
+  button {
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border-radius: 8px;
+    font-size: 17px;
+    font-weight: 500;
+    color: #ffffff80;
+    text-shadow: none;
+    background: transparent;
+    cursor: pointer;
+    box-shadow: transparent;
+    border: 1px solid #ffffff80;
+    transition: 0.5s ease;
+    user-select: none;
+  }
+
+  #btn:hover,
+  :focus {
+    color: #ffffff;
+    background: #008cff;
+    border: 1px solid #008cff;
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff;
+    box-shadow: 0 0 5px #008cff, 0 0 20px #008cff, 0 0 50px #008cff,
+      0 0 100px #008cff;
   }
 </style>
 
@@ -236,5 +262,14 @@
     <p>Habitacion familiar $1200</p>
     <p>Contacto</p>
     <p>5956889921</p>
+  </div>
+
+  <div>
+    <div style="padding-bottom: 5%; font-size: 60px">
+      Favor de confirmar la asistencia
+    </div>
+    <div style="padding-top: 2%">
+      <button id="btn">Confirmar Asistencia</button>
+    </div>
   </div>
 </div>
