--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <p>5956889921</p>
   </div>
 
-  <div>
+  <div class="texto" style="padding-top: 5%">
     <div style="padding-bottom: 5%; font-size: 60px">
       Favor de confirmar la asistencia
     </div>
