--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     border-radius: 8px;
     font-size: 17px;
     font-weight: 500;
-    color: #ffffff80;
+    color: back;
     text-shadow: none;
     background: transparent;
     cursor: pointer;
     box-shadow: transparent;
-    border: 1px solid #ffffff80;
+    border: 1px solid #9d8b56;
     transition: 0.5s ease;
     user-select: none;
   }
@@ -84,11 +84,11 @@
   #btn:hover,
   :focus {
     color: #ffffff;
-    background: #008cff;
-    border: 1px solid #008cff;
+    background: #9d8b56;
+    border: 1px solid #9d8b56;
     text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff;
-    box-shadow: 0 0 5px #008cff, 0 0 20px #008cff, 0 0 50px #008cff,
-      0 0 100px #008cff;
+    box-shadow: 0 0 5px #9d8b56, 0 0 20px #9d8b56, 0 0 50px #9d8b56,
+      0 0 100px #9d8b56;
   }
 </style>
 
@@ -266,9 +266,9 @@
 
   <div class="texto" style="padding-top: 5%">
     <div style="padding-bottom: 5%; font-size: 60px">
-      Favor de confirmar la asistencia
+      Favor de confirmar la asistencia dando click en el botón
     </div>
-    <div style="padding-top: 2%">
+    <div style="padding-top: 2%; padding-bottom: 10%">
       <button id="btn">Confirmar Asistencia</button>
     </div>
   </div>
