--- a/index.html
+++ b/index.html
@@ -74,17 +74,11 @@
     cursor: pointer;
   }
 
-  .my-button:hover {
+  .my-button {
     font-family: "Josefin Slab", serif;
     color: black;
     font-size: 40pc;
     background-color: #9d8b56;
-  }
-
-  .my-button:active {
-    font-family: "Josefin Slab", serif;
-    background-color: #a38d4c;
-    font-size: 40pc;
   }
 </style>
 
