ajuste boton tamanio

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   .my-button {
     font-family: "Josefin Slab", serif;
     color: black;
-    font-size: 40pc;
+    font-size: 40px;
     background-color: #9d8b56;
   }
 </style>
