--- a/index.html
+++ b/index.html
@@ -66,19 +66,11 @@
   }
 
   .my-button {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-
-  .my-button {
     font-family: "Josefin Slab", serif;
-    color: black;
+    color: white;
     font-size: 40px;
     background-color: #9d8b56;
+    border-radius: 5%;
   }
 </style>
 
