--- a/index.html
+++ b/index.html
@@ -219,23 +219,22 @@
     <img src="qramazon.png" width="400px" height="400px" />
     <div class="encabezado" style="padding-bottom: 5%">
       <p>Amazon</p>
-      <div>
-        <form action="https://www.amazon.com.mx/wedding/share/fernandayjoaquin">
-          <input class="my-buttonPequeño" type="submit" value="Ver" />
-        </form>
-      </div>
+    </div>
+    <div>
+      <form action="https://www.amazon.com.mx/wedding/share/fernandayjoaquin">
+        <input class="my-buttonPequeño" type="submit" value="Ver" />
+      </form>
     </div>
     <img src="qrliverpool.png" width="400px" height="400px" />
     <div class="encabezado" style="padding-bottom: 2%">
       <p>Liverpool</p>
-
-      <div>
-        <form
-          action="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51574733"
-        >
-          <input class="my-buttonPequeño" type="submit" value="Ver" />
-        </form>
-      </div>
+    </div>
+    <div>
+      <form
+        action="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51574733"
+      >
+        <input class="my-buttonPequeño" type="submit" value="Ver" />
+      </form>
     </div>
     <p class="texto">No. Evento 51574733</p>
   </div>
@@ -243,10 +242,13 @@
   <div class="encabezado">Hoteles Cercanos</div>
   <div class="texto" style="padding-top: 5%">
     <div style="padding-bottom: 2%; font-size: 60px">Hotel Fontana</div>
-    <a
-      href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e8909b3f1813:0xef5bd8f5bea9964f?entry=s&sa=X&ved=1t:8290&ictx=111"
-      >Ubicación</a
-    >
+    <div>
+      <form
+        action="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e8909b3f1813:0xef5bd8f5bea9964f?entry=s&sa=X&ved=1t:8290&ictx=111"
+      >
+        <input class="my-buttonPequeño" type="submit" value="Ubicacion" />
+      </form>
+    </div>
     <p style="padding-bottom: 2%; font-size: 40px">
       Habitaciones (costos aproximados)
     </p>
@@ -264,10 +266,13 @@
   </div>
   <div class="texto" style="padding-top: 5%">
     <div style="padding-bottom: 2%; font-size: 60px">Hotel Xancalli</div>
-    <a
-      href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e917bf1ceb21:0xd30f80aceb4437b?entry=s&sa=X&ved=1t:8290&ictx=111"
-      >Ubicación</a
-    >
+    <div>
+      <form
+        action="https://www.google.com/maps/place//data=!4m2!3m1!1s0x85d1e917bf1ceb21:0xd30f80aceb4437b?entry=s&sa=X&ved=1t:8290&ictx=111"
+      >
+        <input class="my-buttonPequeño" type="submit" value="Ubicacion" />
+      </form>
+    </div>
     <p style="padding-bottom: 2%; font-size: 40px">
       Habitaciones (costos aproximados)
     </p>
