--- a/index.html
+++ b/index.html
@@ -214,19 +214,19 @@
   <div class="encabezado">
     <img src="copas.png" width="400px" height="500px" />
   </div>
-  <div class="encabezado">Mesas de regalos</div>
+  <div class="encabezado" style="padding-bottom: 5%">Mesas de regalos</div>
   <div class="mesaqr">
     <img src="qramazon.png" width="400px" height="400px" />
-    <div class="encabezado" style="padding-bottom: 5%">
+    <div class="encabezado">
       <p>Amazon</p>
     </div>
-    <div>
+    <div style="padding-bottom: 5%">
       <form action="https://www.amazon.com.mx/wedding/share/fernandayjoaquin">
         <input class="my-buttonPequeño" type="submit" value="Ver" />
       </form>
     </div>
     <img src="qrliverpool.png" width="400px" height="400px" />
-    <div class="encabezado" style="padding-bottom: 2%">
+    <div class="encabezado">
       <p>Liverpool</p>
     </div>
     <div>
